crates/sakka-test/tests/trybuild/collection_vec_missing_attr.rs
use sakka::{Decode, Encode};

#[derive(Debug, PartialEq, Encode, Decode)]
struct VecMissingCollection {
    data: Vec<u8>,
}

fn main() {}
